syntax = "proto3";

package chat.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/NikolosHGW/chat-server/pkg/chat/v1;v1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
    repeated int64 user_ids = 1;
}

message CreateResponse {
    int64 id = 1;
}

message SendMessageRequest {
    int64 chat_id = 1;
    int64 from_user_id = 2;
    string text = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message DeleteRequest {
    int64 id = 1;
}
